\name{beachmatnews}
\title{beachmat News}
\encoding{UTF-8}

\section{Version 2.28.0}{\itemize{
\item Added the \code{.unknown.action=} option to \code{initializeCpp()},
to determine whether to print a message, warning or error when using the unknown matrix fallback.
}}

\section{Version 2.26.0}{\itemize{
\item Added the \code{getExecutor()} and \code{Rtatami::set_executor()} functions.
This ensures that unknown matrices are parallelized safely in downstream packages. 
Also updated instructions for developers to set the parallel executor in their \code{.onLoad()}. 
}}

\section{Version 2.24.0}{\itemize{
\item Automatically cast integer/logical NAs to their double equivalents in the matrices wrapped by \code{initializeCpp()}.
This can be disabled by setting \code{.check.na=FALSE}.

\item Added a \code{initializeCpp()} method for the ConstantArraySeed class. 

\item Using a \code{TileDBArraySeed} in \code{initializeCpp()} now automatically dispatches to \pkg{beachmat.tiledb}.
}}

\section{Version 2.22.0}{\itemize{
\item Moved all C++ libraries to the \pkg{assorthead} package.
This uses the latest versions of the \pkg{tatami} framework.

\item Automatically attempt to use \pkg{beachmat.hdf5} (if installed) when encountering the various \pkg{HDF5Array} classes.

\item Minor optimization when dealing with some known no-op matrices, e.g., \code{WrapperArraySeed} objects from \pkg{alabaster.matrix}.

\item Map delayed type coercions from \code{type<-} to their corresponding native representations (or no-ops).

\item Bugfix for \code{initializeCpp()} to work properly with dense \pkg{Matrix} instances.

\item Soft-deprecated \code{whichNonZero()} in favor of \pkg{SparseArray}'s new \code{nzwhich()} and \code{nzvals()} functions.

\item Exported \code{tatami.*} utilities for manipulating already-initialized pointers from \code{initializeCpp()}.
This includes all of the delayed operation wrappers, some previously internal functions for extracting matrix data,