@@ -1,6 +1,6 @@
 Package: beachmat
-Version: 2.27.2
-Date: 2026-01-11
+Version: 2.27.3
+Date: 2026-02-27
 Title: Compiling Bioconductor to Handle Each Matrix Type
 Authors@R: c(person("Aaron", "Lun", role = c("aut", "cre"), email = "infinite.monkeys.with.keyboards@gmail.com"),
         person("Hervé", "Pagès", role="aut"),
