@@ -12,6 +12,7 @@ export(tatami.arith)
 export(tatami.binary)
 export(tatami.bind)
 export(tatami.column)
+export(tatami.column.medians)
 export(tatami.column.nan.counts)
 export(tatami.column.sums)
 export(tatami.compare)
@@ -26,6 +27,7 @@ export(tatami.prefer.rows)
 export(tatami.realize)
 export(tatami.round)
 export(tatami.row)
+export(tatami.row.medians)
 export(tatami.row.nan.counts)
 export(tatami.row.sums)
 export(tatami.subset)
